# llm-masters-research

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sensitive_data_files.yaml  testes-llm.drawio
fine_tuning/fine_tuning_openai/: check_fine_tuning_file.ipynb  fine_tuning_gpt-4o-mini.ipynb  training_examples.json
llm_api/adapters/: google_drive.py  llama_index.py
llm_api/readers/: base_reader.py  google.py  reader.py
llm_api/server/: app.py
llm_api/utils/: document.py  healthcheck.py  prompt.py
llm_api/vector_store/: old_redis_vs.py  redis.py  redis_vs.py  utils.py
llm_api/vector_store/storage/: docstore.py  keyval_docstore.py  kvstore.py
llmresearch-handbook/: hugo.toml
llmresearch-handbook/content/: _index.md
llmresearch-handbook/content/handbook/: conclusion.md  introduction.md
llmresearch-handbook/content/handbook/communication-standards/: _index.md  asynchronous-communication.md  communication-etiquette.md  language-and-inclusivity.md  synchronous-communication.md
llmresearch-handbook/content/handbook/company-values/: _index.md  collaboration.md  customer-centricity.md  excellence.md  inclusivity.md  innovation.md  integrity.md  transparency.md
llmresearch-handbook/content/handbook/compensation-and-benefits/: _index.md  benefits.md  bonus-programs.md  compensation.md  equity-options.md  salary_ranges.md
llmresearch-handbook/content/handbook/legal-and-licensing/: _index.md  antitrust-and-fair-competition.md  compliance-with-laws.md  confidentiality-agreements.md  intellectual-property.md
llmresearch-handbook/content/handbook/onboarding-process/: _index.md  first-day.md  first-month.md  first-week.md  probationary-period.md
llmresearch-handbook/content/handbook/remote-work-guidelines/: _index.md  communication-tools.md  meetings.md  security.md  work-environment.md  working-hours.md
llmresearch-handbook/content/handbook/security-and-compliance/: _index.md  access-control.md  data-protection.md  incident-reporting.md  physical-security.md
llmresearch-handbook/content/handbook/time-off-and-leave-policies/: _index.md  holidays.md  paid-time-off-pto.md  parental-leave.md  sick-leave.md
llmresearch-handbook/public/: 404.html  index.html  index.xml  sitemap.xml
llmresearch-handbook/public/ananke/css/: main.css.map
llmresearch-handbook/public/categories/: index.html  index.xml
llmresearch-handbook/public/handbook/: index.html  index.xml
llmresearch-handbook/public/handbook/communication-standards/: index.html  index.xml
llmresearch-handbook/public/handbook/company-values/: index.html  index.xml
llmresearch-handbook/public/handbook/compensation-and-benefits/: index.html  index.xml
llmresearch-handbook/public/tags/: index.html  index.xml
prompts/: basic_prompt.txt
research_assets/: architecture.excalidraw
scripts/: insert_data.sh  run.sh
streamlit/: chat.py  tools.py
(+58 files in other folders)
