[tool.poetry]
name = "llm-rag-api"
version = "0.1.0"
description = "LLM RAG API"
authors = ["Igor Martinelli <igor.martinelli@usp.br>"]
readme = "README.md"
packages = [{ include = "llm_api" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datadog = "^0.49.1"
ddtrace = "^2.14.2"
fastapi = "^0.111.0"
google-api-python-client = "^2.148.0"
google-auth = "^2.35.0"
llama-index = "^0.11.16"
llama-index-core = "^0.11.3"
llama-index-embeddings-openai = "^0.2.3"
llama-index-llms-openai = "^0.2.0"
llama-index-readers-file = "^0.2.0"
llama-index-readers-google = "^0.4.0"
llama-index-readers-json = "^0.2.0"
llama-index-storage-chat-store-redis = "^0.2.0"
llama-index-storage-docstore-redis = "^0.2.0"
llama-index-vector-stores-redis = "^0.3.1"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
redis = "^5.1.1"
redisvl = "^0.3.4"
unstructured = "^0.15.14"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
coverage = { extras = ["toml"], version = "^7.6.1" }
debugpy = "^1.8.6"
deptry = "^0.20.0"
google-api-python-client-stubs = "^1.28.0"
mypy = "^1.11.2"
notebook = "^7.2.2"
pre-commit = "^3.8.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.23.7"
pytest-sugar = "^1.0.0"
ruff = "^0.6.9"
types-pyyaml = "^6.0.12.20240917"
types-redis = "^4.6.0.20241004"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
