[tool.poetry]
name = "llm-rag-api"
version = "0.1.0"
description = "LLM RAG API"
authors = ["Igor Martinelli <igor.martinelli@usp.br>"]
readme = "README.md"
packages = [{ include = "llm_api" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litellm = "^1.52.16"
llama-index = "0.12.2"
llama-index-core = ">=0.12.0 <0.13.0"
llama-index-embeddings-litellm = "^0.3.0"
llama-index-llms-litellm = "^0.3.0"
redis = "^5.2.0"
redisvl = "^0.3.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
